

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel", "google-cloud-dataproc", "pyyaml", "gcsfs"]
build-backend = "setuptools.build_meta"

[project]
name = "n3c_spark_extractor"
version = "1.0.0"
authors = [
  {name = "Smita Limaye", email = "slimaye@stanford.edu"},
  {name = "Joseph Mesterhazy", email = "jmesterh@gmail.com" }
]
description = "Extracts N3C cdm tables to csv using pyspark."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stanfordmed/n3c-spark-exporter"




